# op-geth

./: .gitignore  .golangci.yml  ATTENTION.txt  CNAME  Cargo.toml  Dockerfile  Makefile  README.md  entrypoint.sh  flake.nix  fork.yaml  funding.json  go.mod  go.sum  index.html  steps.txt
.circleci/: check-releases.sh  ci-docker-tag-op-geth-release.sh  config.yml
.github/: CODEOWNERS  renovate.json
builder/: beacon_client.go  beacon_client_test.go  builder.go  builder_test.go  config.go  eth_service.go  eth_service_test.go  service.go  types.go  utils.go
common/: celo_types.go  celo_types_test.go
compat_tests/: compat_test.go
consensus/: consensus.go
contracts/: addresses.go  celo_backend.go  fee_currencies.go  read_only_statedb.go
core/: bench_test.go  block_validator.go  blockchain.go  blockchain_celo_test.go  blockchain_insert.go  blockchain_optimism_test.go  blockchain_reader.go  blockchain_test.go  celo_backend.go  celo_evm.go  celo_genesis.go  celo_multi_gaspool.go  celo_multi_gaspool_test.go  celo_read_only_statedb.go  chain_makers.go  error.go  evm.go  gen_genesis.go  genesis.go  l1_fee_context.go  rollup_l1_cost.go  state_prefetcher.go  state_processor.go  state_processor_test.go  state_transition.go  superchain.go  superchain_test.go  tx_list.go  tx_pool.go
crypto/: signature_r1.go  signature_r1_test.go
e2e_test/: .gitignore  foundry.toml  run_all_tests.sh  shared.sh  (+7 more)
precompiles/: Cargo.toml  precompiles.go  precompiles_test.go
precompiles/src/: anemoi.rs  error.rs  lib.rs  utils.rs
precompiles/src/anon/: anonymous.rs  deposit.rs  mod.rs  ownership.rs  transfer.rs
precompiles/src/mental_poker/: compute_aggregate_key.rs  mask.rs  mod.rs  reveal.rs  test.rs  utils.rs  verify_key_ownership.rs  verify_reveal.rs  verify_shuffle.rs
(+388 files in other folders)
