[package]
name = "precompiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.htm

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ethabi = "18.0.0"
lazy_static = "1.4.0"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde_json = "1.0.103"
bincode = "1.3.3"
sha3 = "0.10.8"
rayon = "1.7.0"
num-bigint = "0.4"
hypr-crypto = { package = "crypto",  git = "ssh://git@github.com.hypr/HyprNetwork/hypr-crypto-new.git" }
hypr-algebra = { package = "algebra",  git = "ssh://git@github.com.hypr/HyprNetwork/hypr-crypto-new.git" }
hypr-api = { package = "api",  git = "ssh://git@github.com.hypr/HyprNetwork/hypr-crypto-new.git" }
hypr-plonk = { package = "plonk", git = "ssh://git@github.com.hypr/HyprNetwork/hypr-crypto-new.git" }

ethereum = { version = "0.14.0", default-features = false, features = ["with-serde"] }
ethereum-types = "0.14.0"
evm = { version = "0.37.0", default-features = false, features = ["with-serde"] }
eth-utils = { git = "https://github.com/rust-util-collections/eth-utils", tag = "ruc-v0.0.8", features = ["with_common_precompiles"] }
tracing = "0.1"
num = { version = "0.3", features = ["alloc"] }
num_enum = { version = "0.5.4", default-features = false }
slices = "0.2.0"
rand = "0.8"
base64 = "0.12"
hex = "0.4.3"
barnett-smart-card-protocol = { git = "https://github.com/HyprNetwork/hypr-poker.git", branch = "add_only_function" }
proof-essentials = { git = "https://github.com/HyprNetwork/hypr-poker.git", branch = "add_only_function" }
ark-std = { version = "0.4.0", features = ["std"] }
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
ark-bn254 = "0.4.0"